# geocontext-app

./: .dockerignore  .gitignore  .impeccable.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: gen-icon.cjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  import.rs  lib.rs  main.rs  workspaces.rs
src/lib/: assetPath.ts  issuesByPath.ts  tauri.ts  types.ts  validate.ts
src/lib/components/: AccountMenu.svelte  AssetsBrowser.svelte  CloneDialog.svelte  DatasourcesEditor.svelte  GitPanel.svelte  JsonView.svelte  LayersEditor.svelte  MapPreview.svelte  TopLevelForm.svelte  WorkspaceMenu.svelte
src/routes/: +page.svelte
