[package]
name = "geocontext-editor"
version = "0.1.0"
description = "Tauri editor for GeoContext repositories"
authors = ["you"]
edition = "2021"

[lib]
name = "geocontext_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
