[package]
name = "geocontext-editor"
version = "0.5.1"
description = "Tauri editor for GeoContext repositories"
authors = ["you"]
edition = "2021"

[lib]
name = "geocontext_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Spatial: SHP reader + pure-Rust proj4 + GeoJSON writer
shapefile = "0.6"
proj4rs = { version = "0.1", features = ["crs-definitions"] }
geojson = "0.24"
regex = "1"

# Git + GitHub auth
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "sync-secret-service"] }
ureq = { version = "2", features = ["json"] }
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
